--- a/frontend/views/Resorts.html
+++ b/frontend/views/Resorts.html
@@ -83,8 +83,8 @@
         <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link active" href="Resorts.html">Resorts</a></li>
         <li class="nav-item"><a class="nav-link" href="weather.html" id="weather-link">Weather</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
 
       <!-- SEARCH BAR -->
